--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
+    "react-cookie": "^3.1.1",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "timeago.js": "^4.0.0-beta.2"
