--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-cookie": "^3.1.1",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "react-websocket": "^2.0.1",
     "timeago.js": "^4.0.0-beta.2"
   },
   "scripts": {
