--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-act": "^1.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
