--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-websocket": "^2.0.1",
     "redux": "^4.0.1",
     "redux-act": "^1.7.4",
     "redux-thunk": "^2.3.0"
