--- a/messenger/package.json
+++ b/messenger/package.json
@@ -6,7 +6,11 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "font-awesome": "^4.7.0",
+    "history": "^4.9.0",
+    "react-timeago": "^4.4.0",
+    "react-websocket": "^2.0.1",
   },
   "scripts": {
     "start": "react-scripts start",
