--- a/messenger/package.json
+++ b/messenger/package.json
@@ -9,6 +9,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-infinite-scroller": "^1.2.4",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-scroll": "^1.7.11",
     "react-timeago": "^4.4.0",
