--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
