--- a/messenger/package.json
+++ b/messenger/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "0.9.5"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "0.9.5",
+    "react-transition-group": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
