new: project structure and boilerplate code

--- a/messenger-frontend/package.json
+++ b/messenger-frontend/package.json
@@ -1,11 +1,13 @@
-{
+npm install --save bootstrap{
   "name": "messenger-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "history": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
